tests/NormalTests/paczka2/big_fuzzy/14791571.err
Error in line 10: zctvEBNIlkm A436 46,5
Error in line 11: zctvEBNIlkm S382 23,4
Error in line 3: S382 S204 76,4
Error in line 37: zctvEBNIlkm A997 172,7
Error in line 50: S382 A997 21,8
Error in line 58: VrY A436 36,9
Error in line 60: zctvEBNIlkm S204 88,4
Error in line 80: zctvEBNIlkm A997 6,3
Error in line 84: zctvEBNIlkm S204 74,2
Error in line 85: G6pCoMT8c A997 73,3
Error in line 87: zctvEBNIlkm A436 91,0
Error in line 98: qjaWj A997 11,5
Error in line 99: qjaWj S204 64,1
Error in line 111: S382 A997 39,5
Error in line 117: S382 S204 1,9
Error in line 123: L3oIwJobBju S20A 80,A
Error in line 121: VrY A436 60,1
Error in line 126: S382 S204 13,60
Error in line 125: L3oIwJobBju S204 185,7
Error in line 137: S382 S204 22,4
Error in line 144: S382 S382 35,4
Error in line 146: S382 A436 39,0
Error in line 159: QVfhmu A997 70,0
Error in line 163: G6pCoMT8c A436 35,01
Error in line 161: zctvEBNIlkm S204 10,2
Error in line 164: zctvEBNIlkm A997 0,8
Error in line 165: G6pCoMT8c A436 122,8
Error in line 178: VrY S382 68,1
Error in line 180: VrY A436 98,2
Error in line 181: VrY S382 2,5
Error in line 185: S382 A436 94,6
Error in line 174: QVfhmu S204 10,9
Error in line 205: QVfhmu S204 59,47
Error in line 202: VrY A436 137,0
Error in line 223: L3oIwJobBju A436 19,1
Error in line 213: VrY S382 31,0
Error in line 225: L3oIwJobBju S204 11,0
Error in line 228: qjaWj A436 91,5
Error in line 226: VrY A436 26,6
Error in line 231: G6pCoMT8c S382 112,5
